--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@
 	text-align: center;
 	display: inline-block;
 	padding: 5px;
-	margin: 0px;
+	margin: 0;
 	width: 100px;
 }
 .adin-navbar-item:hover {
@@ -46,7 +46,7 @@
 }
 
 .adin-navbar-item-text {
-	margin: 0px;
+	margin: 0;
 }
 
 
@@ -55,16 +55,16 @@
  *********************************************/
 
 .overview-table {
-	margin: 30px 0px 0px 0px;
+	margin: 30px 0 0 0;
 	width: 100%;
-	padding: 0px;
+	padding: 0;
 }
 
 .overview-table th,
 .overview-table td {
 	border: 1px solid black;
 	border-collapse: collapse;
-	margin: 0px;
+	margin: 0;
 	padding: 10px;
 }
 
@@ -88,6 +88,10 @@
 	vertical-align: middle;
 }
 
+.mailbox-postmaster {
+	background-color: #cccccc;
+}
+
 
 /*********************************************
  *                  FORMULARE                *
@@ -103,7 +107,7 @@
 }
 
 .input-group-text-midinput {
-	border-radius: 0px !important; 
+	border-radius: 0 !important;
 	border-left: none !important;
 	border-right: none !important;
 }
